Foi adicionado um titulo ao index.html.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     </head>
     <body>
+        <h1>Titulo do meu Site</h1>
         
     </body>
 </html>
