Adicionei um meme.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
             Sandra’s brother, Mike, is her manager. He says, “Sandra is only 18. She enjoys acting and entertaining people. But she’s not happy. She doesn’t like being famous.“
             
             “It’s true,” Sandra says. “I’m never alone. Reporters are everywhere. Wherever I go, they’re there. They’re outside my house all the time! That’s so annoying!“.</p>
+
+        <img src="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjyvuGqyKXgAhXRKrkGHXkTB4EQjRx6BAgBEAU&url=https%3A%2F%2Fwww.otvfoco.com.br%2Fartesa-dos-3-reais-volta-ao-e-de-casa-apos-virar-meme-na-internet%2F&psig=AOvVaw3lmaXPswFzbvmhUhjsZ7Cw&ust=1549489496920648" alt="trexxs reaiss">
     </body>
 </html>
