--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>Titulo do meu Site</h1>
